--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "simple-icons": "^14.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
